# revenuecat-fdw

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.gitea/workflows/: release.yml
.github/workflows/: release.yml
src/: lib.rs
supabase-wrappers-wit/: types.wit
supabase/snippets/: setup.sql
wit/: world.wit
