[package]
name = "revenuecat_fdw"
version = "0.1.2"
edition = "2021"
description = "Query RevenueCat subscription data as native PostgreSQL tables via a WASM Foreign Data Wrapper"
license = "MIT"
repository = "https://github.com/wordpuppi/revenuecat-fdw"
homepage = "https://github.com/wordpuppi/revenuecat-fdw"
authors = ["Rick Penabella <ricalski@yahoo.com>"]
keywords = ["supabase", "postgresql", "revenuecat", "fdw", "wasm"]
categories = ["database"]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"

[package.metadata.component]
package = "wordpuppi:revenuecat-fdw"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
